hard-gists/aad88d51001ea83ecfc6/run.log
=== Docker Run Log for aad88d51001ea83ecfc6 ===
Started at: Mi 29. Okt 19:12:09 CET 2025

[2025-10-29 19:12:10] START: Running container for aad88d51001ea83ecfc6
[2025-10-29 19:12:10] SUCCESS: Container 81befae66aa759018a27180fbe80a3bf29bbe6da14b1566bbc03dce180411177 started for aad88d51001ea83ecfc6
=== Container logs for aad88d51001ea83ecfc6 ===
  File "/snippet.py", line 7
    regex = re.compile(ur'(?:\#include \<...\> search starts here\:)(?P<list>.*?)(?:End of search list)', re.DOTALL);
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
=== End of logs for aad88d51001ea83ecfc6 ===
[2025-10-29 19:12:12] INFO: Container 81befae66aa759018a27180fbe80a3bf29bbe6da14b1566bbc03dce180411177 has stopped
